--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -64,6 +64,9 @@
 		<Reference Include="Colossal.Localization">
 			<Private>False</Private>
 		</Reference>
+		<Reference Include="Newtonsoft.Json">
+		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Newtonsoft.Json.dll</HintPath>
+		</Reference>
 		<Reference Include="Unity.Burst.Unsafe">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Unity.Burst.Unsafe.dll</HintPath>
 		  <Private>False</Private>
