--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -7,9 +7,9 @@
 		<LangVersion>9</LangVersion>
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
-		<AssemblyVersion>0.9.0</AssemblyVersion>
-		<FileVersion>0.9.0</FileVersion>
-		<Version>0.9.0</Version>
+		<AssemblyVersion>0.9.1</AssemblyVersion>
+		<FileVersion>0.9.1</FileVersion>
+		<Version>0.9.1</Version>
 	</PropertyGroup>
 	
 	<!--Imports must be after PropertyGroup block-->
@@ -66,6 +66,7 @@
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Newtonsoft.Json.dll</HintPath>
+		  <Private>False</Private>
 		</Reference>
 		<Reference Include="Unity.Burst.Unsafe">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Unity.Burst.Unsafe.dll</HintPath>
