progress towards setting up pallets and swatches

--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -163,6 +163,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="images\format_painter.svg">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </None>
 	  <None Update="LICENSE.txt">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
