--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -27,6 +27,10 @@
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\cohtml.Net.dll</HintPath>
 		  <Private>False</Private>
 		</Reference>
+		<Reference Include="Colossal.AssetPipeline">
+		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.AssetPipeline.dll</HintPath>
+		  <Private>False</Private>
+		</Reference>
 		<Reference Include="Colossal.IO">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.IO.dll</HintPath>
 		  <Private>False</Private>
@@ -112,6 +116,7 @@
 	<ItemGroup>
 		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
 		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
+		<None Include="Systems\Palettes\AddPalettePrefabsSystem.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -149,6 +154,10 @@
 		<Content Include="lang\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Systems\Palettes\AddPalettePrefabsSystem.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
