--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -27,6 +27,10 @@
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\cohtml.Net.dll</HintPath>
 		  <Private>False</Private>
 		</Reference>
+		<Reference Include="Colossal.AssetPipeline">
+		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.AssetPipeline.dll</HintPath>
+		  <Private>False</Private>
+		</Reference>
 		<Reference Include="Colossal.IO">
 		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.IO.dll</HintPath>
 		  <Private>False</Private>
@@ -160,6 +164,12 @@
 	  <EmbeddedResource Include="l10n\pt-BR.json" />
 	  <EmbeddedResource Include="l10n\ru-RU.json" />
 	  <EmbeddedResource Include="l10n\zh-HANS.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Systems\Palettes\AddPalettePrefabsSystem.cs">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
