--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -2,19 +2,21 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net472</TargetFramework>
 		<Configurations>Debug;Release</Configurations>
 		<LangVersion>9</LangVersion>
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
-		<AssemblyVersion>1.1.107</AssemblyVersion>
-		<FileVersion>1.1.107</FileVersion>
-		<Version>1.1.107</Version>
+		<AssemblyVersion>1.1.108</AssemblyVersion>
+		<FileVersion>1.1.108</FileVersion>
+		<Version>1.1.108</Version>
 	</PropertyGroup>
 	
 	<!--Imports must be after PropertyGroup block-->
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
+	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="StyleCop\stylecop.json" />
 	</ItemGroup>
