--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,5 @@
 files:
-  - source: '**/en-US.json'
-    ignore:
-      - UI*
+  - source: Recolor/l10n/en-US.json
     translation: '%original_path%/%locale%.json'
   - source: Recolor/ShippedPrefabs/*/*/l10n/en-US.json
     translation: '%original_path%/%locale%.json'
