--- a/Recolor/Recolor.csproj
+++ b/Recolor/Recolor.csproj
@@ -5,9 +5,9 @@
 		<LangVersion>9</LangVersion>
 		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
-		<AssemblyVersion>1.2.0.1</AssemblyVersion>
-		<FileVersion>1.2.0.1</FileVersion>
-		<Version>1.2.0.1</Version>
+		<AssemblyVersion>1.2.1</AssemblyVersion>
+		<FileVersion>1.2.1</FileVersion>
+		<Version>1.2.1</Version>
 	</PropertyGroup>
 	
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
@@ -116,6 +116,8 @@
 	<ItemGroup>
 		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
 		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
+		<None Include="Bridge\CustomColorComponentsBridge.cs" />
+		<None Include="Bridge\RouteVehicleColorBridge.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -157,6 +159,11 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="ShippedPrefabs\**"></EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Bridge\CustomColorComponentsBridge.cs" />
+	  <Compile Remove="Bridge\RouteVehicleColorBridge.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
